--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
     <li class="lista item">loja</li>
     </ul>
 </header>
-<section id="sobre nos">
+
+<section class="sobre nos">
+    <div class="minhas memorias">
+        <h2 class="minhas memorias conteudo">
+            <p class="texto1"> Foi quando fui viajar com minha familia 
+            </p>
+            <p class="texto2"> fui no beto carreiro
+            </p>
+        </h2>
+
+    </div>
+    <img src="" alt="." class="memorias2">
 </section>
 
-<section id="lojas">
+<section class="lojas">
 </section>
 
 <footer class="rodape">
