--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-    <img src="wawa.jpg" alt="eu" class="cabecalho img">
+    <img src="wawa1.jpg" alt="eu" class="cabecalho img">
     <ul class="lista">
     <li class="lista item">nos</li>
     <li class="lista item">loja</li>
@@ -19,14 +19,14 @@
 <section class="sobre nos">
     <div class="minhas memorias">
         <h2 class="minhas memorias conteudo">
-            <p class="texto1"> Foi quando fui viajar com minha familia 
+            <p class="texto1"> 
             </p>
-            <p class="texto2"> fui no beto carreiro
+            <p class="texto2"> 
             </p>
         </h2>
 
     </div>
-    <img src="" alt="." class="memorias2">
+    <img src="wawa.jpg" alt="." class="memorias2">
 </section>
 
 <section class="lojas">
