--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-    <img src="wawa1.jpg" alt="eu" class="cabecalho img">
+    <img src="wa1.jpg" alt="eu" class="cabecalho img">
     <ul class="lista">
     <li class="lista item">nos</li>
     <li class="lista item">loja</li>
