--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </h2>
 
     </div>
-    <img src="wawa.jpg" alt="." class="memorias2">
+    <img src="wa2.jpg" alt="." class="memorias2">
 </section>
 
 <section class="lojas">
