--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timão</title>
+    <title>Minhas Memórias</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
-     <img src="corinthians.png" alt="logomarca da loja" class="cabecalho-imagem">
+     <img src="wa1.jpg" alt="logomarca da loja" class="cabecalho-imagem">
      <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Sobre corinthians</li>
-        <li class="cabecalho-lista-item">jogadores</li>
+        <li class="cabecalho-lista-item">cachoeira</li>
+        <li class="cabecalho-lista-item">familia</li>
     </ul>
     </header>
-    <section class="sobre_corinthians">
-         <div class="sobre_corinthians-div-conteudo">
-            <h2 class="sobre_corinthians-titulo">Sobre corinthians</h2>
-            <p class="sobre_corinthians-texto-um"> Foi fundado como uma equipe de futebol no dia 1 de 
+    <section class="minhasmemorias">
+         <div class="minhasmemorias-div-conteudo">
+            <h2 class="minhasmemorias-titulo">Sobre corinthians</h2>
+            <p class="minhasmemorias-texto-um"> Foi fundado como uma equipe de futebol no dia 1 de 
                 setembro de 1910 por um grupo de operários do bairro Bom Retiro.
              </p>
-            <p class="sobre_corinthians-texto-dois">Escalação do Corinthians: Carlos Miguel; Fagner,
+            <p class="minhasmemorias-texto-dois">Escalação do Corinthians: Carlos Miguel; Fagner,
              Félix Torres, Gustavo Henrique e Hugo; Raniele, Maycon e Rodrigo Garro; Romero, Wesley e Yuri Alberto. Técnico: Antonio Oliveira
              </p>
          </div>
-         <img src="vitória.jpg" alt="" class="sobre_corinthians-imagem">
+         <img src="wa2.jpg" alt="" class="praia-imagem">
     
     </section>
 
-    <section class="jogadores">
+    <section class="minhasmemorias">
     
     </section>
 
