--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     </header>
     <section class="minhasmemorias">
          <div class="minhasmemorias-div-conteudo">
-            <h2 class="minhasmemorias-titulo">Sobre corinthians</h2>
-            <p class="minhasmemorias-texto-um"> Foi fundado como uma equipe de futebol no dia 1 de 
-                setembro de 1910 por um grupo de operários do bairro Bom Retiro.
+            <h2 class="minhasmemorias-titulo">Minhas Memórias</h2>
+            <p class="minhasmemorias-texto-um"> Foi um dia que eu e minah família fomos para uma cachoeira foi bem legal o lugar era lindo e não tinha gente.
              </p>
-            <p class="minhasmemorias-texto-dois">Escalação do Corinthians: Carlos Miguel; Fagner,
-             Félix Torres, Gustavo Henrique e Hugo; Raniele, Maycon e Rodrigo Garro; Romero, Wesley e Yuri Alberto. Técnico: Antonio Oliveira
+            <p class="minhasmemorias-texto-dois">Eu amo sair com meus familiares me divertir amo ir em lugares que tenha água, e tão bom sair se divertir
+                e poder ter memórias para uardar e contar.
              </p>
          </div>
          <img src="wa2.jpg" alt="" class="praia-imagem">
