--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <header class="cabecalho">
      <img src="wa2.jpg" alt="logomarca da loja" class="cabecalho-imagem">
      <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">cachoeira</li>
-        <li class="cabecalho-lista-item">familia</li>
+        <li class="cabecalho-lista-item">Minhas Mem´orias</li>
     </ul>
     </header>
     <section class="minhasmemorias">
          <div class="minhasmemorias-div-conteudo">
-            <h2 class="minhasmemorias-titulo">Minhas Memórias</h2>
+            <h2 class="minhasmemorias-titulo">Praia</h2>
             <p class="minhasmemorias-texto-um"> Foi um dia que eu e minah família fomos para uma cachoeira foi bem legal o lugar era lindo e não tinha gente.
              </p>
             <p class="minhasmemorias-texto-dois">Eu amo sair com meus familiares me divertir amo ir em lugares que tenha água, e tão bom sair se divertir
