--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de Anime</title>
+    <title>Minhas Memórias</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="cabecalho">
-        <img src="img-ainme-mat1.jpg" alt="personagens animes" class="cabecalho-imagem">
+        <img src="wa1.jpg" alt="praia" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"> sobre os animes</li>
-            <li class="cabecalho-lista-item"> personagens</li>
+            <li class="cabecalho-lista-item"> sobre minhas viagens</li>
+            <li class="cabecalho-lista-item"> praia</li>
         </ul>
   </header> 
 
-  <section class="sobres os animes">
-      <div class="sobre-os-animes-conteúdo">
-        <h2 class="sobre-os-animes-título">Sobre os animes </h2>
-        <p class="sobre-os-animes-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas animações, umas são mais famosas que outras.
-          Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The promissed Neverland e Tokyo revenger. <br>
+  <section class="sobres memórias">
+      <div class="sobre-memórias-conteúdo">
+        <h2 class="sobre-memórias-título">PRAIA </h2>
+        <p class="sobre-os-animes-texto-um">IHUHHHHHHHHHH. <br>
         </p>
 
-        <p class="sobre-os-animes-texto-dois">
+        <p class="sobre-MEMÓRIAS-texto-dois">
           Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele descobre o mundo dos shinigamis. <br>
           The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por demônios. <br>
           Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada morreu, ele viaja no tempo, mudando 
@@ -32,7 +31,7 @@
         </p>
       </div>
 
-      <img src="demon-aula.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
+      <img src="wa2.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
 
   </section>
 
@@ -40,7 +39,7 @@
       <h2 class="personagens-titulo">Personagens</h2>
 
         <div class="personagens-animes">
-          <img src="anime.jpg" alt="" class="personagens-animes-imagem">
+          <img src="wa3.jpg" alt="" class="personagens-animes-imagem">
           <h3>Toshiro Hitsugaya</h3>
           <a href="" target="blank" class="personagens-animes-um">
             <img src="" alt="" class="personagens-animes-icone">
