--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 
 <body>
   <header class="cabecalho">
-        <img src="wa1.jpg" alt="praia" class="cabecalho-imagem">
+        <img src="wawa.jpg" alt="praia" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"> sobre minhas viagens</li>
-            <li class="cabecalho-lista-item"> praia</li>
         </ul>
   </header> 
 
   <section class="sobres memórias">
       <div class="sobre-memórias-conteúdo">
         <h2 class="sobre-memórias-título">PRAIA </h2>
-        <p class="sobre-os-animes-texto-um">IHUHHHHHHHHHH. <br>
+        <p class="sobre-os-animes-texto-um">Nessa viagem eu fui para a praia . <br>
         </p>
 
         <p class="sobre-MEMÓRIAS-texto-dois">
@@ -31,7 +30,7 @@
         </p>
       </div>
 
-      <img src="wa2.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
+      <img src="wa1.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
 
   </section>
 
@@ -39,7 +38,7 @@
       <h2 class="personagens-titulo">Personagens</h2>
 
         <div class="personagens-animes">
-          <img src="wa3.jpg" alt="" class="personagens-animes-imagem">
+          <img src="wa2.jpg" alt="" class="personagens-animes-imagem">
           <h3>Toshiro Hitsugaya</h3>
           <a href="" target="blank" class="personagens-animes-um">
             <img src="" alt="" class="personagens-animes-icone">
