--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <section class="sobres memórias">
       <div class="sobre-memórias-conteúdo">
-        <h2 class="sobre-memórias-título">PRAIA </h2>
-        <p class="sobre-os-animes-texto-um">Nessa viagem eu fui para a praia . <br>
+        <h2 class="sobre-memórias-título">CACHOEIRA </h2>
+        <p class="sobre-os-animes-texto-um">Nessa viagem eu fui para a cachoeira com minha família foi muito divertido pois o lugar era lindo e o tempo estava otimo. <br>
         </p>
 
         <p class="sobre-MEMÓRIAS-texto-dois">
