--- a/index.html
+++ b/index.html
@@ -2,104 +2,114 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minhas Memórias</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minhas Lembranças</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="cabecalho">
-        <img src="wawa.jpg" alt="praia" class="cabecalho-imagem">
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"> sobre minhas viagens</li>
-        </ul>
-  </header> 
+    <img src="wawa.jpg" alt="biografia" class="cabecalho-imagem">
+    <ul class="cabecalho-lista">
+      <li class="cabecalho-lista-item">Passeios</li>
 
-  <section class="sobres memórias">
-      <div class="sobre-memórias-conteúdo">
-        <h2 class="sobre-memórias-título">CACHOEIRA </h2>
-        <p class="sobre-os-animes-texto-um">Nessa viagem eu fui para a cachoeira com minha família foi muito divertido pois o lugar era lindo e o tempo estava otimo. <br>
-        </p>
+    </ul>
+  </header>
 
-        <p class="sobre-MEMÓRIAS-texto-dois">
-          Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele descobre o mundo dos shinigamis. <br>
-          The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por demônios. <br>
-          Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada morreu, ele viaja no tempo, mudando 
-          o pasado na tentativa de salvá-la.
-        </p>
-      </div>
+  <section class="sobres-lembranças">
+    <div class="sobre-lembranças-conteúdo">
+      <h2 class="sobre-lembranças-título">Lembranças</h2>
+      <p class="sobre-lembranças/viajens-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
+        animações, umas são mais famosas que outras.
+        Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
+        promissed Neverland e Tokyo revenger. <br>
+      </p>
 
-      <img src="wa1.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
+      <p class="sobre-os-animes-texto-dois">
+        Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele
+        descobre o mundo dos shinigamis. <br>
+        The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por
+        demônios. <br>
+        Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada
+        morreu, ele viaja no tempo, mudando
+        o pasado na tentativa de salvá-la.
+      </p>
+    </div>
+
+    <img src="wa1.jpg" alt="CACHOEIRA" class="sobre-cachoeira-img">
 
   </section>
 
-  <section class="personagens">
-      <h2 class="personagens-titulo">Personagens</h2>
+  <section class="cachoeira">
 
-        <div class="personagens-animes">
-          <img src="wa2.jpg" alt="" class="personagens-animes-imagem">
-          <h3>Toshiro Hitsugaya</h3>
-          <a href="" target="blank" class="personagens-animes-um">
-            <img src="" alt="" class="personagens-animes-icone">
-          </a>
-        </div>
+    <h2 class="praia-titulo">Praia</h2>
 
-        <div class="personagens-animes">
+    <div class="praia">
+      <div class="praia">
+        <img src="wa2.jpg" alt="" class="praia-imagem">
+        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
+        <a href="" target="blank" class="personagens-animes-um">
+          <img src="" alt="" class="personagens-animes-icone">
+        </a>
+      </div>
+
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-dois">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-dois">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-tres">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-tres">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-quatro">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-quatro">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-cinco">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-cinco">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-seis">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-seis">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-sete">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-sete">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
 
-        <div class="personagens-animes">
+      <div class="personagens-animes">
+        <img src="" alt="">
+        <h3></h3>
+        <a href="" target="blank" class="personagens-animes-oito">
           <img src="" alt="">
-          <h3></h3>
-          <a href="" target="blank" class="personagens-animes-oito">
-            <img src="" alt="">
-          </a>
-        </div>
+        </a>
+      </div>
+    </div>
 
   </section>
 
