--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="cabecalho">
     <img src="wawa.jpg" alt="biografia" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
-      <li class="cabecalho-lista-item">Passeios</li>
+      <li class="cabecalho-lista-item">Meus Passeios e Lembranças</li>
 
     </ul>
   </header>
@@ -20,20 +20,19 @@
   <section class="sobres-lembranças">
     <div class="sobre-lembranças-conteúdo">
       <h2 class="sobre-lembranças-título">Lembranças</h2>
-      <p class="sobre-lembranças/viajens-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
-        animações, umas são mais famosas que outras.
-        Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
-        promissed Neverland e Tokyo revenger. <br>
+      <p class="sobre-lembranças/viajens-texto-um"> Era um dia de sol, eu sai para um almoço em família, resolvemos
+        sair para nos divertir, meu pai resolveu ir para essa cachoeira que fica no interior de Imbituva, o lugar era super 
+        longo, chegando em um lugar de parada era necessário andar mais 2km para poder chegar as cachoeiras.
+
       </p>
 
       <p class="sobre-os-animes-texto-dois">
-        Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele
-        descobre o mundo dos shinigamis. <br>
-        The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por
-        demônios. <br>
-        Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada
-        morreu, ele viaja no tempo, mudando
-        o pasado na tentativa de salvá-la.
+        Para chegarmos as cachoeiras foi um longo caminho, mas tivemos uma enorme recompensa, havia 2 cachoeiras uma era
+          facíl acesso mas a outra era muito mais longe tinha que subir uma enorme subida
+          mas chegando lá a vista era maravilhosa, a água era linda e gelada a cachoeira era super grande e linda
+          foi uma das cachoeiras m,ais lindas que já vi, foi um dia maravilhoso e belo que irei demorar esquecer.
+         <br>
+       
       </p>
     </div>
 
