--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
     <div class="praia">
       <div class="praia">
         <img src="wa2.jpg" alt="" class="praia-imagem">
-        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
+        <h3 class="personagem-nome">Unicentro</h3>
         <a href="" target="blank" class="personagens-animes-um">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="">
+        <img src="wa3.jpg" alt="">
         <h3></h3>
         <a href="" target="blank" class="personagens-animes-dois">
           <img src="" alt="">
