--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       </p>
 
-      <p class="sobre-os-animes-texto-dois">
+      <p class="sobre-lembranças-texto-dois">
         Para chegarmos as cachoeiras foi um longo caminho, mas tivemos uma enorme recompensa, havia 2 cachoeiras uma era
           facíl acesso mas a outra era muito mais longe tinha que subir uma enorme subida
           mas chegando lá a vista era maravilhosa, a água era linda e gelada a cachoeira era super grande e linda
