--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <img src="wa1.jpg" alt="CACHOEIRA" class="sobre-cachoeira-img">
 
-  </section>10
+  </section>
 
   <section class="cachoeira">
 
