--- a/index.html
+++ b/index.html
@@ -4,111 +4,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minhas Lembranças</title>
+  <title>Site de Anime</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="cabecalho">
-    <img src="wawa.jpg" alt="biografia" class="cabecalho-imagem">
+    <img src="img-ainme-mat1.jpg" alt="personagens animes" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
-      <li class="cabecalho-lista-item">Meus Passeios e Lembranças</li>
-
+      <li class="cabecalho-lista-item"> sobre os animes</li>
+      <li class="cabecalho-lista-item"> personagens</li>
     </ul>
   </header>
 
-  <section class="sobres-lembranças">
-    <div class="sobre-lembranças-conteúdo">
-      <h2 class="sobre-lembranças-título">Lembranças</h2>
-      <p class="sobre-lembranças/viajens-texto-um"> Era um dia de sol, eu sai para um almoço em família, resolvemos
-        sair para nos divertir, meu pai resolveu ir para essa cachoeira que fica no interior de Imbituva, o lugar era super 
-        longo, chegando em um lugar de parada era necessário andar mais 2km para poder chegar as cachoeiras.
-
+  <section class="sobres-os-animes">
+    <div class="sobre-os-animes-conteúdo">
+      <h2 class="sobre-os-animes-título">Sobre os animes </h2>
+      <p class="sobre-os-animes-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
+        animações, umas são mais famosas que outras.
+        Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
+        promissed Neverland e Tokyo revenger. <br>
       </p>
 
-      <p class="sobre-lembranças-texto-dois">
-        Para chegarmos as cachoeiras foi um longo caminho, mas tivemos uma enorme recompensa, havia 2 cachoeiras uma era
-          facíl acesso mas a outra era muito mais longe tinha que subir uma enorme subida
-          mas chegando lá a vista era maravilhosa, a água era linda e gelada a cachoeira era super grande e linda
-          foi uma das cachoeiras m,ais lindas que já vi, foi um dia maravilhoso e belo que irei demorar esquecer.
-         <br>
-       
+      <p class="sobre-os-animes-texto-dois">
+        Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele
+        descobre o mundo dos shinigamis. <br>
+        The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por
+        demônios. <br>
+        Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada
+        morreu, ele viaja no tempo, mudando
+        o pasado na tentativa de salvá-la.
       </p>
     </div>
 
-    <img src="wa1.jpg" alt="CACHOEIRA" class="sobre-cachoeira-img">
+    <img src="demon-aula.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
 
   </section>
 
-  <section class="cachoeira">
+  <section class="personagens">
 
-    <h2 class="praia-titulo">Praia</h2>
+    <h2 class="personagens-titulo">Personagens</h2>
 
-    <div class="praia">
-      <div class="praia">
-        <img src="wa2.jpg" alt="" class="praia-imagem">
-        <h3 class="personagem-nome">Unicentro</h3>
+    <div class="todos-personagens">
+      <div class="personagens-animes">
+        <img src="anime.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Manjiro Sano ou Mikey</h3>
         <a href="" target="blank" class="personagens-animes-um">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="wa3.jpg" alt="">
-        <h3></h3>
+        <img src="aula-ite-anime.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
         <a href="" target="blank" class="personagens-animes-dois">
-          <img src="" alt="">
+          <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
+        <img src="fototres.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Takashi Mitsuya</h3>
         <a href="" target="blank" class="personagens-animes-tres">
-          <img src="" alt="">
+          <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
+        <img src="" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome"></h3>
         <a href="" target="blank" class="personagens-animes-quatro">
-          <img src="" alt="">
+          <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
+        <img src="" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome"></h3>
         <a href="" target="blank" class="personagens-animes-cinco">
-          <img src="" alt="">
+          <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
+        <img src="" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome"></h3>
         <a href="" target="blank" class="personagens-animes-seis">
-          <img src="" alt="">
+          <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
-
-      <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
-        <a href="" target="blank" class="personagens-animes-sete">
-          <img src="" alt="">
-        </a>
-      </div>
-
-      <div class="personagens-animes">
-        <img src="" alt="">
-        <h3></h3>
-        <a href="" target="blank" class="personagens-animes-oito">
-          <img src="" alt="">
-        </a>
-      </div>
-    </div>
 
   </section>
 
