--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="cabecalho">
     <img src="img-ainme-mat1.jpg" alt="personagens animes" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
-      <li class="cabecalho-lista-item"> sobre os animes</li>
-      <li class="cabecalho-lista-item"> personagens</li>
+      <li class="cabecalho-lista-item"> Minhas Fotos</li>
+      
     </ul>
   </header>
 
