--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site de Anime</title>
+  <title>Minhas Fotos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,7 +19,7 @@
 
   <section class="sobres-os-animes">
     <div class="sobre-os-animes-conteúdo">
-      <h2 class="sobre-os-animes-título">Sobre os animes </h2>
+      <h2 class="sobre-os-animes-título">Fotografias </h2>
       <p class="sobre-os-animes-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
         animações, umas são mais famosas que outras.
         Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
