--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Minhas Fotos</title>
+  <title>Site de Anime</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="cabecalho">
-    <img src="wawa.jpg" alt="personagens animes" class="cabecalho-imagem">
+    <img src="IMGprinipal.jpg" alt="personagens animes" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
-      <li class="cabecalho-lista-item">Minhas Fotos</li>
-      
+      <li class="cabecalho-lista-item"> sobre os animes</li>
+      <li class="cabecalho-lista-item"> personagens</li>
     </ul>
   </header>
 
   <section class="sobres-os-animes">
     <div class="sobre-os-animes-conteúdo">
-      <h2 class="sobre-os-animes-título">Fotografias </h2>
+      <h2 class="sobre-os-animes-título">Sobre os animes </h2>
       <p class="sobre-os-animes-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
         animações, umas são mais famosas que outras.
         Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
@@ -37,7 +37,7 @@
       </p>
     </div>
 
-    <img src="demon-aula.jpg" alt="demon slayer cenário" class="sobre-os-animes-img">
+    <img src="img-ainme-mat1.jpg" alt="personagens-animes" class="sobre-os-animes-img">
 
   </section>
 
@@ -55,8 +55,8 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="aula-ite-anime.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
+        <img src="fotosete.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Chifuyu Matsuno</h3>
         <a href="" target="blank" class="personagens-animes-dois">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -71,28 +71,53 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome"></h3>
+        <img src="foto-quatro.png" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Ray</h3>
         <a href="" target="blank" class="personagens-animes-quatro">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome"></h3>
+        <img src="fotocinco.webp" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Norman</h3>
         <a href="" target="blank" class="personagens-animes-cinco">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome"></h3>
+        <img src="fotoseis.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Emma</h3>
         <a href="" target="blank" class="personagens-animes-seis">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
       </div>
+
+      <div class="personagens-animes">
+        <img src="aula-ite-anime.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
+        <a href="" target="blank" class="personagens-animes-sete">
+          <img src="" alt="" class="personagens-animes-icone">
+        </a>
+      </div>
+
+      <div class="personagens-animes">
+        <img src="fotooito.jpg" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Byakuya Kuchiki</h3>
+        <a href="" target="blank" class="personagens-animes-oito">
+          <img src="" alt="" class="personagens-animes-icone">
+        </a>
+      </div>
+
+      <div class="personagens-animes">
+        <img src="fotonove.avif" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Ichigo Kurosaki</h3>
+        <a href="" target="blank" class="personagens-animes-nove">
+          <img src="" alt="" class="personagens-animes-icone">
+        </a>
+      </div>
+
 
   </section>
 
