--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site de Anime</title>
+  <title>Minhas Fotos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +13,6 @@
     <img src="IMGprinipal.jpg" alt="personagens animes" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item"> sobre os animes</li>
-      <li class="cabecalho-lista-item"> personagens</li>
     </ul>
   </header>
 
