--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <header class="cabecalho">
-    <img src="IMGprinipal.jpg" alt="personagens animes" class="cabecalho-imagem">
+    <img src="wawa.jpg" alt="eu" class="cabecalho-imagem">
     <ul class="cabecalho-lista">
-      <li class="cabecalho-lista-item"> sobre os animes</li>
+      <li class="cabecalho-lista-item">Minhas Fotos</li>
     </ul>
   </header>
 
