--- a/index.html
+++ b/index.html
@@ -16,33 +16,24 @@
     </ul>
   </header>
 
-  <section class="sobres-os-animes">
-    <div class="sobre-os-animes-conteúdo">
-      <h2 class="sobre-os-animes-título">Sobre os animes </h2>
-      <p class="sobre-os-animes-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
+  <section class="fotografias">
+    <div class="fotografias-conteúdo">
+      <h2 class="fotografias-título">Fotografias</h2>
+      <p class="fotografias-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
         animações, umas são mais famosas que outras.
         Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
         promissed Neverland e Tokyo revenger. <br>
       </p>
 
-      <p class="sobre-os-animes-texto-dois">
-        Bleach acompanha o jovem Ichigo Kuroaki, um adolescente que vê fantasmas e após ser atacado por um hollow, ele
-        descobre o mundo dos shinigamis. <br>
-        The Promissed Nerverland segue crianças que tentam fugir de um orfanato, descobrindo um mundo tomado por
-        demônios. <br>
-        Tokyo Revenger é sobre um jovem de 26 anos com sua vida sendo um fracaso, e ao descobrir que sua ex-namorada
-        morreu, ele viaja no tempo, mudando
-        o pasado na tentativa de salvá-la.
-      </p>
     </div>
 
-    <img src="img-ainme-mat1.jpg" alt="personagens-animes" class="sobre-os-animes-img">
+    <img src="img-ainme-mat1.jpg" alt="fotos" class="fotografias-img">
 
   </section>
 
-  <section class="personagens">
+  <section class="fotos">
 
-    <h2 class="personagens-titulo">Personagens</h2>
+    <h2 class="fotos-titulo">Fotos</h2>
 
     <div class="todos-personagens">
       <div class="personagens-animes">
