--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
   <section class="fotografias">
     <div class="fotografias-conteúdo">
       <h2 class="fotografias-título">Fotografias</h2>
-      <p class="fotografias-texto-um"> No Brasil, o termo 'anime' se refere a animções japonesas. Entre tantas
-        animações, umas são mais famosas que outras.
-        Existem animes de variadoss temas, agradando um maior número de pessoas. Nesse site, veremos sobre: Bleach, The
-        promissed Neverland e Tokyo revenger. <br>
+      <p class="fotografias-texto-um"> Eu amo tirar fotos dos lugares aonde eu vou e onde eu visito, para mim as fotos são como um album de lembranças. 
+       Quando eu vou rever minhas fotos me lembro do que ocorreu quando eu a tirei, sinto uma sensação de saudade e de felicidade ao memso tempo, eu amo
+       tirar fotos por esse motivo pois posso me recordar dos momentos bons depois.<br>
       </p>
 
     </div>
