--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <img src="img-ainme-mat1.jpg" alt="fotos" class="fotografias-img">
+    <img src="wa1.jpg" alt="fotos" class="fotografias-img">
 
   </section>
 
