--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
   </section>
 
 
-  
+
   <section class="fotos">
 
     <h2 class="fotos-titulo">Fotos</h2>
 
-    <div class="todos-personagens">
+    <div class="todos-fotos">
       <div class="personagens-animes">
-        <img src="anime.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Manjiro Sano ou Mikey</h3>
-        <a href="" target="blank" class="personagens-animes-um">
-          <img src="" alt="" class="personagens-animes-icone">
+        <img src="wa1.jpg" alt="" class="fotos-imagem">
+        <h3 class="foto-nome">Manjiro Sano ou Mikey</h3>
+        <a href="" target="blank" class="foto-um">
+          <img src="" alt="" class="fotos-icone">
         </a>
       </div>
 
