--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div class="todos-fotos">
       <div class="personagens-animes">
         <img src="wa1.jpg" alt="" class="fotos-imagem">
-        <h3 class="foto-nome">Manjiro Sano ou Mikey</h3>
+        <h3 class="foto-nome">museu</h3>
         <a href="" target="blank" class="foto-um">
           <img src="" alt="" class="fotos-icone">
         </a>
       </div>
 
       <div class="personagens-animes">
-        <img src="fotosete.jpg" alt="" class="personagens-animes-imagem">
+        <img src="wa2.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Chifuyu Matsuno</h3>
         <a href="" target="blank" class="personagens-animes-dois">
           <img src="" alt="" class="personagens-animes-icone">
@@ -51,7 +51,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="fototres.jpg" alt="" class="personagens-animes-imagem">
+        <img src="wa3.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Takashi Mitsuya</h3>
         <a href="" target="blank" class="personagens-animes-tres">
           <img src="" alt="" class="personagens-animes-icone">
@@ -59,7 +59,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="foto-quatro.png" alt="" class="personagens-animes-imagem">
+        <img src="wa4.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Ray</h3>
         <a href="" target="blank" class="personagens-animes-quatro">
           <img src="" alt="" class="personagens-animes-icone">
@@ -67,7 +67,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="fotocinco.webp" alt="" class="personagens-animes-imagem">
+        <img src="wa5.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Norman</h3>
         <a href="" target="blank" class="personagens-animes-cinco">
           <img src="" alt="" class="personagens-animes-icone">
