--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="fotoseis.jpg" alt="" class="personagens-animes-imagem">
+        <img src="wa6.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Emma</h3>
         <a href="" target="blank" class="personagens-animes-seis">
           <img src="" alt="" class="personagens-animes-icone">
@@ -83,7 +83,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="aula-ite-anime.jpg" alt="" class="personagens-animes-imagem">
+        <img src="wa7.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
         <a href="" target="blank" class="personagens-animes-sete">
           <img src="" alt="" class="personagens-animes-icone">
@@ -91,7 +91,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="fotooito.jpg" alt="" class="personagens-animes-imagem">
+        <img src="wa8.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Byakuya Kuchiki</h3>
         <a href="" target="blank" class="personagens-animes-oito">
           <img src="" alt="" class="personagens-animes-icone">
@@ -99,7 +99,7 @@
       </div>
 
       <div class="personagens-animes">
-        <img src="fotonove.avif" alt="" class="personagens-animes-imagem">
+        <img src="wa9.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Ichigo Kurosaki</h3>
         <a href="" target="blank" class="personagens-animes-nove">
           <img src="" alt="" class="personagens-animes-icone">
